@@ -1005,9 +1005,9 @@ Pygments highlighter.)</p>
 <pre class="code python literal-block"><code>print 'This is Python code.'</code></pre>
 <p>The <span class="docutils literal"><span class="pre">:number-lines:</span></span> option (with optional start value) generates line
 numbers:</p>
-<pre class="code python literal-block"><code><span class="ln"> 8 </span># print integers from 0 to 9:
-<span class="ln"> 9 </span>for i in range(10):
-<span class="ln">10 </span>    print i</code></pre>
+<pre class="code python literal-block"><code data-lineno=" 8 "><span class="ln"> 8 </span># print integers from 0 to 9:
+</code><code data-lineno=" 9 "><span class="ln"> 9 </span>for i in range(10):
+</code><code data-lineno="10 "><span class="ln">10 </span>    print i</code></pre>
 <p>For inline code snippets, there is the <cite>code</cite> role, which can be used
 directly (the code will not be parsed/tagged, as the language is not known)
 or as base for special code roles, e.g. the LaTeX code in the next
@@ -1016,8 +1016,8 @@ paragraph.</p>
 <code class="tex">\alpha = f(x)</code> prints <span class="formula"><i>α</i> = <i>f</i>(<i>x</i>)</span>.</p>
 <p>The <span class="docutils literal">:code:</span> option of the <cite>include</cite> directive sets the included content
 as a code block, here the rst file <span class="docutils literal">header_footer.txt</span> with line numbers:</p>
-<pre class="code rst literal-block"><code><span class="ln">1 </span>.. header:: Document header
-<span class="ln">2 </span>.. footer:: Document footer</code></pre>
+<pre class="code rst literal-block"><code data-lineno="1 "><span class="ln">1 </span>.. header:: Document header
+</code><code data-lineno="2 "><span class="ln">2 </span>.. footer:: Document footer</code></pre>
 </section>
 <section id="meta">
 <h4><a class="toc-backref" href="#toc-entry-63"><span class="sectnum">2.14.11</span> Meta</a></h4>
